--- a/index.html
+++ b/index.html
@@ -123,18 +123,18 @@
 		<!-- end about -->
 
 		<!-- start portfolio -->
-		<!-- <div id="portfolio" class="section">
+		<div id="portfolio" class="section">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
-					<h2 class="wow bounce">PORTFOLIO</h2>
+					<h2 class="wow bounce">OUR INVESTORS</h2>
 				</div>
 				<div class="col-md-4 col-xs-6 wow fadeIn" data-wow-delay="0.6s">
 					<div class="portfolio-thumb">
 						<img src="images/portfolio-img1.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Web Design</h4>
-								<h5>Author: Cindy</h5>
+								<h4>Name</h4>
+								<h5>About</h5>
 							</div>
 					</div>
 				</div>
@@ -142,8 +142,8 @@
 					<div class="portfolio-thumb">
 						<img src="images/portfolio-img2.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Web App</h4>
-								<h5>Author: Linda</h5>
+								<h4>Name</h4>
+								<h5>About</h5>
 							</div>
 					</div>
 				</div>
@@ -151,8 +151,8 @@
 					<div class="portfolio-thumb">
 						<img src="images/portfolio-img3.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Mobile App</h4>
-								<h5>Author: Kate</h5>
+								<h4>Name</h4>
+								<h5>About</h5>
 							</div>
 					</div>
 				</div>
@@ -160,8 +160,8 @@
 					<div class="portfolio-thumb">
 						<img src="images/portfolio-img4.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>Old Artwork</h4>
-								<h5>Author: Catherine</h5>
+								<h4>Name</h4>
+								<h5>About</h5>
 							</div>
 					</div>
 				</div>
@@ -169,14 +169,14 @@
 					<div class="portfolio-thumb">
 						<img src="images/portfolio-img5.jpg" class="img-responsive" alt="portfolio img">
 							<div class="portfolio-overlay">
-								<h4>New Animation</h4>
-								<h5>Author: Kathy</h5>
+								<h4>Name</h4>
+								<h5>About</h5>
 							</div>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 	<!-- end portfolio -->
 
 		<!-- start contact -->
