--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
 					<div class="col-lg-5 col-lg-offset-1 col-md-6 wow fadeInUp" data-wow-delay="0.6s">
 						<address>
 							<p class="contact-title">CONTACT ME</p>
-							<p><i class="fa fa-phone"></i> 090-080-0760</p>
-							<p><i class="fa fa-envelope-o"></i> info@company.com</p>
-							<p><i class="fa fa-map-marker"></i> 120 Old Walking Street, GL 16060</p>
+							<p><i class="fa fa-phone"></i></p>
+							<p><i class="fa fa-envelope-o"></i></p>
+							<p><i class="fa fa-map-marker"></i></p>
 						</address>
 					</div>
 					<div class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp" data-wow-delay="0.6s">
@@ -262,9 +262,9 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
-						<p>Copyright &copy; 2018 Lavish Personal Profile 
+						<p>Copyright &copy; 2020 Team BIZZ-VENTURE 
                         
-                        . Designed by <a rel="nofollow noopener" href="https://templatemo.com">templatemo</a></p>
+                        <!-- . Designed by <a rel="nofollow noopener" href="https://templatemo.com">templatemo</a></p> -->
 						<!-- <hr> -->
 						<!-- <ul class="social-icon">
 							<li><a href="#" class="fa fa-facebook"></a></li>
