--- a/index.html
+++ b/index.html
@@ -30,6 +30,14 @@
 		<link rel="stylesheet" href="css/jquery.fullPage.css">
 		<!-- custom -->
 		<link rel="stylesheet" href="css/templatemo-style.css">
+	<style type="text/css">
+		@media only screen and (max-width: 652px) {
+			body{
+				width: fit-content;
+			}
+		}
+	</style>
+
 	</head>
 	<body>
 
@@ -41,7 +49,7 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
-						<img src="images/logo.png" height="300px" width="auto">
+						<img src="images/logo.png" height="auto" width="100%">
 						<!-- <h3>Simple and Elegant</h3> -->
 						<h1>BIZZ-VENTURE</h1>
 						<h2 class="rotate">PARTICIPATE, GET INCUBATED, GROW</h2>
@@ -56,8 +64,10 @@
 		<!-- end home -->
 
 		<!-- start work -->
-		<div id="contact" class="section" style="background: #1a1a1a ">
-			<div class="container ges_card" >
+		<div id="contact" class="section" style="background: #1a1a1a; padding: 10%;">
+			<div style=>
+			</div>
+			<div class="container ges_card" style="align-content: center;">
 				<div class="row" style="margin: auto; display: flex; justify-content: center; width: 60%;">
 					<div class="wow fadeInDown " style="padding-left: 30px">
 						<h2 font>GLOBAL ENTREPRENEURSHIP SUMMIT</h2>
