--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
-						<img src="images/logo.png" height="auto" width="100%">
+						<img src="images/logo.png" height="auto" width="250px">
 						<!-- <h3>Simple and Elegant</h3> -->
 						<h1>BIZZ-VENTURE</h1>
 						<h2 class="rotate">PARTICIPATE, GET INCUBATED, GROW</h2>
 						<p >A social initiative that is working towards the upliftment of the entrepreneurship culture in the tier-2 & tier-3 Indian cities and helping India's long term plan of becoming self- sustainable.</p>
-						<a href="#work" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
+						<a href="#contact" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					</div>
 					<div class="col-md-2"></div>
 				</div>
