--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
+		<link rel="stylesheet" href="css/Page-1.css">
 		<link rel="stylesheet" href="css/current_event.css">
 		<!-- animate -->
 		<link rel="stylesheet" href="css/animate.min.css">
@@ -240,7 +241,17 @@
 		</div>
 	</div>
 	<!-- end portfolio -->
-
+	<!-- start mentors -->
+	<div id="mentors" class="section">
+			<div class="container">
+				<div class="row" style="margin: auto; display: flex; justify-content: center; width: 50%;">
+					<div class="wow bounce " style="padding-left: 30px">
+						<h2>PAST EVENTS</h2>
+					</div>
+                </div>					
+			</div>
+		</div>
+	<!-- end mentors -->
 		<!-- start contact -->
 		<div id="contact" class="section">
 			<div class="container">
