alignment of entrepreneurship card

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 		<div id="contact" class="section" style="background: #1a1a1a; padding: 10%;">
 			<div style=>
 			</div>
-			<div class="container ges_card" style="align-content: center;">
+			<div class="container ges_card" style="display: flex; align-items: center; justify-content: center;">
 				<div class="row" style="margin: auto; display: flex; justify-content: center; width: 60%;">
 					<div class="wow fadeInDown " style="padding-left: 30px">
 						<h2 font>GLOBAL ENTREPRENEURSHIP SUMMIT</h2>
