--- a/index.html
+++ b/index.html
@@ -76,25 +76,25 @@
                 </div>
                 <br>
                 <br>
-				<div class="row">
-					<!-- <div class="col-lg-5 col-lg-offset-1 col-md-6 wow fadeInLeft" data-wow-delay="0.6s">
-						<address>
-							<p class="contact-title">CONTACT ME</p>
-							<p><i class="fa fa-phone"></i> 090-080-0760</p>
-							<p><i class="fa fa-envelope-o"></i> info@company.com</p>
-							<p><i class="fa fa-map-marker"></i> 120 Old Walking Street, GL 16060</p>
-						</address>
-					</div> -->
-					<!-- <div class="col-lg-6 col-md-6 col-xs-10 wow fadeInRight" data-wow-delay="0.6s">
-						<form role="form" method="post" action="#">
-							<input name="name" type="text" class="form-control" id="name" placeholder="Your Name">
-							<input name="email" type="email" class="form-control" id="email" placeholder="Your Email">
-							<textarea name="message" rows="5" class="form-control" id="message" placeholder="Your Message"></textarea>
-							<input name="send" type="submit" class="form-control" id="send" value="SEND ME">
-						</form>
-					</div> -->
+				<!-- <div class="row">
+						<div class="col-lg-5 col-lg-offset-1 col-md-6 wow fadeInLeft" data-wow-delay="0.6s">
+							<address>
+								<p class="contact-title">CONTACT ME</p>
+								<p><i class="fa fa-phone"></i> 090-080-0760</p>
+								<p><i class="fa fa-envelope-o"></i> info@company.com</p>
+								<p><i class="fa fa-map-marker"></i> 120 Old Walking Street, GL 16060</p>
+							</address>
+						</div>
+						<div class="col-lg-6 col-md-6 col-xs-10 wow fadeInRight" data-wow-delay="0.6s">
+							<form role="form" method="post" action="#">
+								<input name="name" type="text" class="form-control" id="name" placeholder="Your Name">
+								<input name="email" type="email" class="form-control" id="email" placeholder="Your Email">
+								<textarea name="message" rows="5" class="form-control" id="message" placeholder="Your Message"></textarea>
+								<input name="send" type="submit" class="form-control" id="send" value="SEND ME">
+							</form>
+						</div>
 					<div class="col-md-1 col-sm-1"></div>
-				</div>
+				</div> -->
 			</div>
 		</div>
 
@@ -153,7 +153,7 @@
 		</div>
 		<!-- end work -->
 		<!-- start about -->
-		<!-- <div id="about" class="section">
+		<div id="about" class="section">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-6 col-xs-11 wow fadeInLeft" data-wow-delay="0.9s">
@@ -182,7 +182,7 @@
 					</div>
 				</div>
 			</div>
-		</div> -->
+		</div>
 		<!-- end about -->
 
 		<!-- start portfolio -->
