--- a/index.html
+++ b/index.html
@@ -293,10 +293,14 @@
 		</div>
 	</div>
 
-	<div id="schedule" class="section">
+	<div id="schedule" class="section" style="background: #1a1a1a;">
 
 		<div class="container">
-
+			<div class="row" style="margin: auto; display: flex; justify-content: center; width: 50%;">
+					<div class="wow bounce " style="padding-left: 30px">
+						<h2>SCHEDULE</h2>
+					</div>
+                </div>
 			<div class="row">
 
 				<div class="section-title">
@@ -418,7 +422,7 @@
 							</div>
 						</div>
 
-						<div class="event">
+						<!-- <div class="event">
 							<div class="event-day">
 								<div>
 									<span class="day">8</span>
@@ -426,13 +430,13 @@
 								</div>
 							</div>
 							<div class="event-content">
-								<!-- <p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p> -->
+								<p class="event-time"><i class="fa fa-clock-o"></i> 8 : 00 AM - 11 : 00 AM</p>
 								<h3 class="event-title">Main Event Day</h3>
 								<p>Companies have been alloted, Challenges have been explained, Judges are seated. It's time for the final pitching battle to start.
 									<br>It's the main day</p>
-								<!-- <p>By <a href="#">John Doe</a></p> -->
+								<p>By <a href="#">John Doe</a></p>
 							</div>
-						</div>
+						</div> -->
 
 
 						<!-- <div class="event">
@@ -466,7 +470,7 @@
 		</div> -->
 	<!-- end mentors -->
 		<!-- start contact -->
-		<div id="contact" class="section" style="background: #1a1a1a;">
+		<div id="contact" class="section" style="background: none;">
 			<div class="container">
 				<div class="row" style="margin: auto; display: flex; justify-content: center; width: 50%;">
 					<div class="wow bounce " style="padding-left: 30px">
