--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
 				width: fit-content;
 			}
 		}
+	#logo{
+		width: 430px !important;
+		height: auto;
+		margin-left: auto;
+		margin-right: auto;
+		padding-bottom: 50px;
+	}
 	</style>
 
 	</head>
@@ -54,9 +61,9 @@
 				<div class="row">
 					<div class="col-md-2"></div>
 					<div class="col-md-8 wow fadeIn" data-wow-delay="0.9s">
-						<img src="images/logo.png" height="auto" width="250px">
+						<img src="images/logo.png" id="logo">
 						<!-- <h3>Simple and Elegant</h3> -->
-						<h1>BIZZ-VENTURE</h1>
+						<!-- <h1>BIZZ-VENTURE</h1> -->
 						<h2 class="rotate">PARTICIPATE, GET INCUBATED, GROW</h2>
 						<p >A social initiative that is working towards the upliftment of the entrepreneurship culture in the tier-2 & tier-3 Indian cities and helping India's long term plan of becoming self- sustainable.</p>
 						<a href="#contact" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
@@ -397,23 +404,7 @@
 					    </div>
 					  </div>
 					</div>
-					<div class="part_card-container">
-					  <div class="part_card">
-					    <div class="front">
-					      <h2 class="sub-title">Season 1</h2>
-					      <h1 class="title">
-					        Rick and Morty
-					      </h1>
-					      <img class="image" src="http://pre14.deviantart.net/0aef/th/pre/f/2014/015/2/f/look_at_that_thing_morty____rick_and_morty_by_kory226-d72a6ub.png" alt="" />
-					    </div>
-					    <div class="back">
-					      <h3 class="synopsis">Synopsis</h3>
-					      <p>Rick and Morty is an American adult animated television series created by Justin Roiland and Dan Harmon for Adult Swim. The series follows the misadventures of alcoholic scientist Rick and his easily influenced grandson Morty, who split their time
-					        between domestic family life and interdimensional travel.</p>
-					     <a href="#contact" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
-					    </div>
-					  </div>
-					</div>
+
 			</div>
 		</div>
 		<div id="contact" class="section" style="background: none;">
