Contact Us Sorted

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 		<!-- end home -->
 
 		<!-- start work -->
-		<div id="contact" class="section" style="background: #1a1a1a; padding: 10%; padding-bottom: 0px;">
+		<div id="about" class="section" style="background: #1a1a1a; padding: 10%; padding-bottom: 0px;">
 			<div class="bg-dark me-md-3 pt-3 px-3 pt-md-5 px-md-5 text-center text-white overflow-hidden">
 			<div>
 				<h2 class="wow bounce " style="padding-left: 30px">
@@ -125,7 +125,7 @@
 		 --></div>
 
 
-		<div id="work" class="section" style="background: none;">
+		<div id="past" class="section" style="background: none;">
 			<div class="container">
 				<div class="row" style="margin: auto; display: flex; justify-content: center; width: 50%;">
 					<div class="wow bounce " style="padding-left: 30px">
@@ -179,7 +179,7 @@
 		</div>
 		<!-- end work -->
 		<!-- start about -->
-		<div id="about" class="section" style="background-color: #1a1a1a">
+		<div id="masterclass" class="section" style="background-color: #1a1a1a">
 			<div class="container">
 				<h1>ABOUT MASTERCLASS</h1>
 				<!-- <div class="row">
@@ -213,7 +213,7 @@
 		<!-- end about -->
 
 		<!-- start portfolio -->
-		<div id="portfolio" class="section" style="background: none;">
+		<div id="keynote" class="section" style="background: none;">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-12">
@@ -345,7 +345,7 @@
 		</div> -->
 	<!-- end mentors -->
 		<!-- start contact -->
-		<div id="contact" class="section" style="background: none;">
+		<div id="apply" class="section" style="background: none;">
 			<div class="container">
 				<div class="row" style="margin: auto; display: flex; justify-content: center; width: 50%; ">
 					<div class="wow bounce " style="padding-left: 30px">
@@ -387,7 +387,7 @@
 					    </div>
 					  </div>
 					</div>
-					<div class="part_card-container">
+					<!-- <div class="part_card-container">
 					  <div class="part_card">
 					    <div class="front">
 					      <h2 class="sub-title">Season 1</h2>
@@ -403,14 +403,15 @@
 					     <a href="#contact" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a>
 					    </div>
 					  </div>
-					</div>
+					</div> -->
 
 			</div>
 		</div>
-		<div id="contact" class="section" style="background: none;">
+		</div>
+		<div id="contact" class="section" style="background: #1a1a1a; height: 100vh !important;">
 			<div class="container">
 				<div class="row" style="margin: auto; display: flex; justify-content: center; width: 50%;">
-					<div class="wow bounce " style="padding-left: 30px">
+					<div class="wow bounce " style="padding-left: 30px; padding-bottom: 50px;">
 						<h2>CONNECT WITH US</h2>
 					</div>
                 </div>
@@ -424,12 +425,13 @@
 						</address>
 					</div>
 					<div class="col-lg-6 col-md-6 col-xs-10 wow fadeInUp" data-wow-delay="0.6s">
-						<!-- <form role="form" method="post" action="#">
+						<form role="form" method="post" action="#">
 							<input name="name" type="text" class="form-control" id="name" placeholder="Your Name">
 							<input name="email" type="email" class="form-control" id="email" placeholder="Your Email">
 							<textarea name="message" rows="5" class="form-control" id="message" placeholder="Your Message"></textarea>
-							<input name="send" type="submit" class="form-control" id="send" value="SEND ME">
-						</form> -->
+							<!-- <a href="#contact" class="btn btn-default smoothScroll wow fadeInUp" data-wow-delay="1s">Get started</a> -->
+							<input name="send" type="submit" class="form-control" id="send" style="border-radius: 5px;" value="SEND ME">
+						</form>
 					</div>
 					<div class="col-md-1 col-sm-1"></div>
 				</div>
@@ -438,7 +440,7 @@
 		<!-- end contact -->
 
 		<!-- start footer -->
-		<footer  style="background: none;">
+		<footer style="background: black;">
 			<div class="container">
 				<div class="row">
 					<div class="col-md-12 wow fadeIn" data-wow-delay="0.9s">
@@ -446,11 +448,11 @@
                         
                         <!-- . Designed by <a rel="nofollow noopener" href="https://templatemo.com">templatemo</a></p> -->
 						<!-- <hr> -->
-						<!-- <ul class="social-icon">
+						<ul class="social-icon">
 							<li><a href="#" class="fa fa-facebook"></a></li>
 							<li><a href="#" class="fa fa-twitter"></a></li>
 							<li><a href="#" class="fa fa-instagram"></a></li>
-						</ul> -->
+						</ul>
 					</div>
 				</div>
 			</div>
